--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -265,7 +265,7 @@ tex_cal_leadership_purged:0 "Pacific States Leadership Purged"
 tex_cal_leadership_amnesty:0 "Pacific States Leadership Amnesty"
 tex_new_orleans_beacon:0 "Constructing the Beacon of the New America"
 aus_wealth:0 "Share our Wealth!"
-aus_wealth_revocked:0 "American Union State revockes the Wealth redistribution"
+aus_wealth_revocked:0 "American Union State revokes the Wealth redistribution"
 aus_long_tariff:0 "Long's Tariff"
 long_tariff_slow:0 "Long's Tariff slow the economy"
 long_ind_decentralization:0 "Long's Industrial Decentralisation"
@@ -286,7 +286,7 @@ TEX_protecting_whites_desc:0 ""
 TEX_american_apartheid:0 "American Apartheid"
 TEX_american_apartheid_desc:0 "While Jim Crow laws segregating America were principally in the south, they have been made to be nation wide. Now from North to South and East to West segregation is a fact of life."
 TEX_whites_welfare:0 "Welfare For Whites"
-TEX_entente_american_trade:0 "Candian-American Trade"
+TEX_entente_american_trade:0 "Canadian-American Trade"
 TEX_german_american_trade:0 "German-American Trade"
 
 ### Parties ###
