--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -23,7 +23,7 @@ CSA_roll_the_union_on:0 "Roll the Union On"
 CSA_reconstruction_policy:0 "Reconstructing America"
 CSA_reconstruction_policy_desc:0 "Now that the revolution has been won, it is time to begin rebuilding the country and repairing the damage that has been done to win the freedom for the workers."
 CSA_war_time_economy:0 "War Time Economy"
-CSA_war_time_economy_desc:0 "We must fight for the freedom of all workers. Time will come when we can turn our Swords into Ploughshares but first we need swords. We must build up an engine of war to smash the capitalist reactionaires once and for all."
+CSA_war_time_economy_desc:0 "We must fight for the freedom of all workers. Time will come when we can turn our Swords into Ploughshares but first we need swords. We must build up an engine of war to smash the capitalist reactionaries once and for all."
 CSA_women_working:0 "Working Women"
 CSA_controled_unions:0 "Control of the Unions"
 CSA_nationalized_resources:0 "Resource Nationalisation"
@@ -275,7 +275,7 @@ CSA_found_american_raido:0 "American Radio Union"
 CSA_found_american_raido_desc:0 "It has been proposed that we merge the various radio unions into one big radio union. This will let us promote the revolutionary ideals throughout the country. Furthermore we can use this to help explain the policies to average Americans and how it impacts them through fireside chats. "
 CSA_found_the_cia:0 "Found the CIA"
 CSA_found_the_cia_desc:0 "The revolution has taught us that we need to have espionage. It is a necessary evil, but it is necessary. Thus we shall create the Central Intelligence Agency. This will keep America safe from the reactionaries and help us promote syndicalism in other countries covertly. The CIA will be our sword in the darkness to strike against reactionaries wherever they may hide. "
-CSA_centralized_union:0 "Centralized Union"
+CSA_centralized_union:0 "Centralised Union"
 CSA_centralized_union_desc:0 "After several days of heated debate between the delegates in Philadelphia, the centralists were victorious. Their ideal of a centralised totalist Federal government. For the Revolution to bring forth we shall have a centralised union. "
 CSA_centralist_victory_tooltip:0 "The Centralists will need to be victorious in the convention"
 CSA_revolutionary_guards:0 "Revolutionary Guards"
@@ -455,11 +455,11 @@ combinedsyndicates.7.d:0 "Some of The elites and the upper class of the Great La
 combinedsyndicates.7.a:0 "Close the Ambassador Bridge and Patrol the Detroit River!"
 combinedsyndicates.7.b:0 "Let The Pitiful, Isolated Individuals go where they belong!"
 combinedsyndicates.8.t:0 "The Nationalisation of the Banking System"
-combinedsyndicates.8.d:0 "The Revolution is in need of funding, and one of the ideas presented by Max Schachtman is to nationalize the banks. Shall we make this into a decree?"
-combinedsyndicates.8.a:0 "Schachtman is right, Nationalize all the Banks!"
+combinedsyndicates.8.d:0 "The Revolution is in need of funding, and one of the ideas presented by Max Schachtman is to nationalise the banks. Shall we make this into a decree?"
+combinedsyndicates.8.a:0 "Schachtman is right, nationalise all the Banks!"
 combinedsyndicates.8.b:0 "We'll find other sources of money, leave the Banking System as is"
 combinedsyndicates.9.t:0 "The America First Escape"
-combinedsyndicates.9.d:0 "With his defeat, Long and the AUS leadership had escaped to South America taking with him a sizable amount of money and most of his remaining followers. Though he vowed to return, Reed and the CSA were not worried."
+combinedsyndicates.9.d:0 "With his defeat, Long and the AUS leadership had escaped to South America taking with him a sizeable amount of money and most of his remaining followers. Though he vowed to return, Reed and the CSA were not worried."
 combinedsyndicates.9.a:0 "They can run like cowards"
 combinedsyndicates.10.t:0 "Reed and the PSA Leadership"
 combinedsyndicates.10.d:0 "After the end of the civil war, the question of the PSA leadership was put before the CSA. The capitalist nature of the Pacific States was incompatible with the socialist nature of the CSA but it was also the thing that kept California one of the most technically adept places in America. Destroying the PSA leadership would destroy this but ensure that Reed would have full control of the industry on the West Coast."
@@ -477,7 +477,7 @@ combinedsyndicates.13.a:0 "Side with the Totalists"
 combinedsyndicates.13.b:0 "Side with the Anarcho-syndicalists"
 combinedsyndicates.13.c:0 "Side with the Trade Unionists"
 combinedsyndicates.15.t:0 "The Southern Resistance"
-combinedsyndicates.15.d:0 "The Socialists had brought about an immediate end to the racial segragation laws in the south. This caused an immediate flare up of racial tensions and violence. Throughout the South remnants of Long's Minutemen have formed a pact with the KKK to oppose us and the revolution. They terrorize the local countryside and were reportedly responsible for more than one lynching."
+combinedsyndicates.15.d:0 "The Socialists had brought about an immediate end to the racial segregation laws in the south. This caused an immediate flare up of racial tensions and violence. Throughout the South remnants of Long's Minutemen have formed a pact with the KKK to oppose us and the revolution. They terrorise the local countryside and were reportedly responsible for more than one lynching."
 combinedsyndicates.15.a:0 "Blasted Reactionaries"
 combinedsyndicates.16.t:0 "Violence throughout the South"
 combinedsyndicates.16.d:0 "The racial tension that had been at the boiling point, boiled over, and erupted into violence. Groups of whites and blacks attacked each other as the local councils were unable to contain the issue. Tensions ran high as the South began to burn. Revolutionaries are demanding that we bring in more soldiers to the south."
@@ -493,7 +493,7 @@ combinedsyndicates.19.t:0 "Jack Reed's Illness"
 combinedsyndicates.19.d:0 "The physical health of the Head of the Central Committee, Jack Reed, has been deteriorating for a while now, to the point that a public announcement has had to be made concerning it, as it can no longer be concealed. The exact cause of his illness is currently unknown, but the wasting effects of it are shortening his life. Whilst his passion for the revolution remains untempered, his ability to lead it may not last much longer."
 combinedsyndicates.19.a:0 "How dreadful"
 combinedsyndicates.20.t:0 "Jack Reed passes away"
-combinedsyndicates.20.d:0 "At 23:14 the Head of the Central Committee, Jack Reed, after valiantly fighting for his life and his country, and having managed to live to see his dream of a Syndicalist America, has passed away. An autopsy conducted showed that he died of a brain haemorrhage that was due to complications caused by a malignant tumor in his heart."
+combinedsyndicates.20.d:0 "At 23:14 the Head of the Central Committee, Jack Reed, after valiantly fighting for his life and his country, and having managed to live to see his dream of a Syndicalist America, has passed away. An autopsy conducted showed that he died of a brain haemorrhage that was due to complications caused by a malignant tumour in his heart."
 combinedsyndicates.20.a:0 "A Hero of Labour dies today."
 
 combinedsyndicates.21.t:0 "Second Constitutional Convention"
@@ -510,7 +510,7 @@ combinedsyndicates.23.a:0 "The Federalists balanced executive"
 combinedsyndicates.23.b:0 "The Centralists strong executive"
 combinedsyndicates.23.c:0 "The Unionists Weak Executive"
 combinedsyndicates.24.t:0 "Policy towards Reactionaries"
-combinedsyndicates.24.d:0 "While the delegates were brought to Philadelphia to debate the nature of the republic, today a seperate issue was brought up when a delegate asked: what should be done towards the reactionary traitors? This lead to numerous debate. The Unionists seek clemency for all and a chance for all those to build a new life in the new republic. While the Federalists claim that the leadership of those that fought the revolution must be put on trial. While the Centralists are claiming that all those who opposed the revolution must be judged for their deeds. "
+combinedsyndicates.24.d:0 "While the delegates were brought to Philadelphia to debate the nature of the republic, today a separate issue was brought up when a delegate asked: what should be done towards the reactionary traitors? This lead to numerous debate. The Unionists seek clemency for all and a chance for all those to build a new life in the new republic. While the Federalists claim that the leadership of those that fought the revolution must be put on trial. While the Centralists are claiming that all those who opposed the revolution must be judged for their deeds. "
 combinedsyndicates.24.a:0 "Malice Towards None"
 combinedsyndicates.24.b:0 "The leaders shall be judged"
 combinedsyndicates.24.c:0 "All must meet their fate for opposing the revolution"
