--- a/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -212,7 +212,7 @@ CAL_offense_army:0 "An Offensive Army"
 CAL_pacific_rangers:0 "The Californian Rangers"
 CAL_pacific_trade:0 "Pacific Free Trade"
 CAL_saftey_regulations:0 "Good Regulations"
-CAL_wealth_gospel:0 "Gosepl of Wealth"
+CAL_wealth_gospel:0 "Gospel of Wealth"
 CAL_nbc_radio:0 "National Broadcasting Company"
 CAL_jappanese_businesses:0 "Japanese-Pacific Business ties"
 CAL_aog_offices:0 "German – Pacific business ties"
@@ -467,7 +467,7 @@ pacificstates.47.d:0 "PSA wants to join the Entente - if they join then we can f
 pacificstates.47.a:0 "We don't care"
 pacificstates.47.b:0 "Outrageous! Send a letter to the King"
 pacificstates.48.t:0 "USA protests against alliance with PSA"
-pacificstates.48.d:0 "The USA, terrified by PSA plans, presses us not to accept them into the Entente. The American president wrote a personal letter to the King, in which he declares the PSA as a part of Amercia's sphere of influence and threatens us with breaking off diplomatic relations. Without the USA our economy will collapse!"
+pacificstates.48.d:0 "The USA, terrified by PSA plans, presses us not to accept them into the Entente. The American president wrote a personal letter to the King, in which he declares the PSA as a part of America's sphere of influence and threatens us with breaking off diplomatic relations. Without the USA our economy will collapse!"
 pacificstates.48.a:0 "Don't do anything against the will of the US"
 pacificstates.48.b:0 "We don't care about the USA's opinion"
 pacificstates.49.t:0 "Canada banned us from Entente"
