--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -9,14 +9,14 @@ USA_reed_victory_tooltip:0 "John Silias, Jack, Reed has won the US election"
 USA_presidential_election_tooltip:0 "The elections have gone ahead..."
 USA_reconstruction_tooltip:0 "The civil war is over, time to rebuild America."
 USA_civil_economy_tooltip:0 "Prepare the economy for civil war!"
-USA_united_provinces_invitation_tooltip:0 "We must make sure that the United Provinces is loyal and remains friendly to our interests and doesn't get overrun by syndicalism from Centro-America."
-USA_panaman_invention_tooltip:0 "We must make sure that Panama is loyal and remains friendly to our interests and doesn't get overrun by syndicalism from Centro-America."
+USA_united_provinces_invitation_tooltip:0 "We must make sure that the United Provinces is loyal and remains friendly to our interests and doesn't get overrun by syndicalism from Centroamérica."
+USA_panaman_invention_tooltip:0 "We must make sure that Panama is loyal and remains friendly to our interests and doesn't get overrun by syndicalism from Centroamérica."
 USA_cuban_invitation_tooltip:0 "Cuba lies within the American Pond of the Caribbean. It is in our interests to make sure that Cuba remains friendly to the United States and our interests. "
 USA_haitian_invitation_tooltip:0 "Haiti lies within the American Pond of the Caribbean. It is in our interests to make sure that Haiti remains friendly to the United States and our interests. "
 USA_dominican_invitation_tooltip:0 "The Dominican Republic lies within the American Pond of the Caribbean. It is in our interests to make sure that The Dominican Republic remains friendly to the United States and our interests."
 USA_peruvian_invitation_tooltip:0 "The government of Peru stands as a bulwark against syndicalism in the Andes. We should make sure that they remain friendly to American Businesses and of course the American government."
 
-### National Focus - Presidents ###
+### Foci - Presidents ###
 USA_1936_election:0 "The 1936 Election"
 USA_1936_election_desc:0 "The 1936 elections are the most ideological fraught elections in US history to date. Syndicalists and Nationalists, Republicans and Democrats all battle it out at the ballot box to see who will become the President of the United States of America. In the end though only one can be president."
 USA_president_reed:0 "President Reed"
@@ -58,7 +58,7 @@ USA_banking_act_desc:0 ""
 USA_wagner_act:0 "Wagner Act"
 USA_wagner_act_desc:0 ""
 
-### National Focus - MacArthur ###
+### Foci - MacArthur ###
 USA_general_macarthur:0 "General MacArthur"
 USA_general_macarthur_desc:0 ""
 USA_protector_of_democracy:0 "Protector of Democracy"
@@ -86,7 +86,7 @@ USA_military_junta_major_desc:0 ""
 USA_american_ceaser:0 "The American Caesar"
 USA_american_ceaser_desc:0 ""
 
-### National Focus - Army ###
+### Foci - Army ###
 USA_review_military:0 "Review the American Military"
 USA_review_military_desc:0 ""
 USA_army:0 "the US Army"
@@ -117,7 +117,7 @@ USA_fight_for_america_desc:0 ""
 USA_army_rangers:0 "Army Ranger Corps"
 USA_army_rangers_desc:0 ""
 
-### National Focus - Navy ###
+### Foci - Navy ###
 USA_usn:0 "The US Navy"
 USA_usn_desc:0 ""
 USA_battle_ships:0 "Favour Battleships"
@@ -144,7 +144,7 @@ USA_marine_training:0 "Marine Training"
 USA_new_aircraft_carriers:0 "New Aircraft Carriers"
 USA_new_aircraft_carriers_desc:0 ""
 
-### National Focus - Air Force ###
+### Foci - Air Force ###
 USA_usaf:0 "the USAF"
 USA_usaf_desc:0 ""
 USA_air_supremecy:0 "Favour Air Supremacy"
@@ -166,7 +166,7 @@ USA_found_wasp_desc:0 ""
 USA_rocketry:0 "American Rocketry"
 USA_rocketry_desc:0 ""
 
-### National Focus - War Economy ###
+### Foci - War Economy ###
 USA_war_economy:0 "The American War Economy"
 USA_war_economy_desc:0 ""
 USA_move_industry_west:0 "Move Industry West"
@@ -196,7 +196,7 @@ USA_esmwt_desc:0 ""
 USA_militerized_economy:0 "We can do it!"
 USA_militerized_economy_desc:0 ""
 
-### National Focus - Reconstruction ###
+### Foci - Reconstruction ###
 USA_reconstruction:0 "Reconstructing America"
 USA_reconstruction_desc:0 ""
 USA_post_war_america:0 "Post Civil-War America"
@@ -226,7 +226,7 @@ USA_rebuilt_america_desc:0 ""
 USA_america_reborn:0 "America is reborn"
 USA_america_reborn_desc:0 ""
 
-### National Focus - New Deal ###
+### Foci - New Deal ###
 USA_the_new_deal:0 "The Fair Deal"
 USA_the_new_deal_desc:0 ""
 USA_found_fera:0 "Create FERA"
@@ -247,7 +247,7 @@ USA_farmer_relief:0 "Provide Relief to the Farmers"
 USA_farmer_relief_desc:0 ""
 USA_homestead:0 "Rural Electrification Act"
 USA_homestead_desc:0 ""
-USA_new_trust_busting:0 "National Labor Relations Board"
+USA_new_trust_busting:0 "National Labour Relations Board"
 USA_new_trust_busting_desc:0 ""
 USA_public_works_administration:0 "Create the Public Works Administration"
 USA_public_works_administration_desc:0 ""
@@ -271,7 +271,7 @@ USA_social_security:0 "Pass Social Security"
 USA_social_security_desc:0 ""
 USA_economy_has_recovered:0 "The Economy Has Recovered"
 
-### National Focus - Foreign Policy ###
+### Foci - Foreign Policy ###
 USA_foreign_policy:0 "Foreign Policy"
 USA_foreign_policy_desc:0 ""
 USA_form_pax_americana:0 "Form the League of Nations"
@@ -450,8 +450,6 @@ USA_agriculture_improvements:0 "Agricultural Improvements"
 USA_liberty_ship:0 "Liberty Ships"
 USA_democracy_arsenal:0 "Arsenal of Democracy"
 
-
-
 ### Parties ###
 USA_totalist_party:0 "ACP"
 USA_totalist_party_long:0 "American Communist Party"
@@ -481,7 +479,7 @@ ibm_company:0 "IBM"
 standard_oil_usa:0 "Standard Oil"
 colt:0 "Colt"
 winchester_western:0 "Winchester Western"
-kr_springfield_armory:0 "Springfield Armory"
+kr_springfield_armory:0 "Springfield Armoury"
 watervliet_arsenal:0 "Watervliet Arsenal"
 studebacker:0 "Studebacker"
 lima_locomotive_works:0 "Lima Locomotive Works"
@@ -500,30 +498,13 @@ kr_norfolk_shipyard:0 "Norfolk Naval Yard"
 new_york_shipbuilding:0 "New York Shipbuilding Corporation"
 kr_electric_boat:0 "Electric Boat"
 
-### Theorists ###
-kr_john_von_neuman:0 "John Von Neuman"
-kr_edward_teller:0 "Edward Teller"
-kr_robert_oppenheimer:0 "Robert Oppenheimer"
-kr_robert_truax:0 "Robert Truax"
-kr_carl_spaatz:0 "Carl Spaatz"
-kr_chester_nimitz:0 "Chester Nimitz"
-kr_curtis_lemay:0 "Curtis Lemay"
-kr_dwight_eisenhower:0 "Dwight Eisenhower"
-kr_ernst_king:0 "Ernst King"
-kr_henry_arnold:0 "Henry Arnold"
-kr_hyman_rickover:0 "Hyman Rickover"
-kr_oman_bradley:0 "Oman Bradley"
-kr_maxwell_taylor:0 "Maxwell Taylor"
-kr_arthur_radford:0 "Arthur Radford"
-kr_george_patton:0 "George Patton"
-
-### Opinion ###
+### Opinion Modifiers ###
 USA_embargo_syndicalism:0 "American Embargo on the International"
 USA_american_trade:0 "American Trade Relations"
 
 ### Events ###
 ustates.501.t:0 "America in 1936"
-ustates.501.d:0 "The United States in 1936 stands in crisis. The United States was able to escape in the first weltkrieg. Which allowed its prosperity to continue well into the 1920s. However the victory by the German Empire and the French and later British Revolutions would lead to the wall street crash of 1926. This sent the United States into the Great Depression and allowed the Berlin Stock Market to take its place in the world. The election of Herbert Hoover in 1928 showed promise of fixing America, however Hoover was unable to fix the problems of the Depression. This has fueled the rise of radical parties in America from the Combined Syndicates of America on the Far Left and the American First Party on the Far Right. The fact that Hoover won re-election by the House of Representatives in 1932 and the fact that the Great Depression isn't over means that the problems do not look to be going away soon. Many throughout the country fear that disaster will happen should one of the extreme parties come into power or nothing is done to solve the Depression. "
+ustates.501.d:0 "The United States in 1936 stands in crisis. The United States was able to escape in the first Weltkrieg. Which allowed its prosperity to continue well into the 1920s. However the victory by the German Empire and the French and later British Revolutions would lead to the wall street crash of 1926. This sent the United States into the Great Depression and allowed the Berlin Stock Market to take its place in the world. The election of Herbert Hoover in 1928 showed promise of fixing America, however Hoover was unable to fix the problems of the Depression. This has fuelled the rise of radical parties in America from the Combined Syndicates of America on the Far Left and the American First Party on the Far Right. The fact that Hoover won re-election by the House of Representatives in 1932 and the fact that the Great Depression isn't over means that the problems do not look to be going away soon. Many throughout the country fear that disaster will happen should one of the extreme parties come into power or nothing is done to solve the Depression. "
 ustates.501.a:0 "God Save America!"
 
 ustates.1.t:0 "A Day In September"
@@ -715,7 +696,7 @@ ustates.38.b:0 "Moderate reforms. Blended control."
 ustates.38.c:0 "Limited reforms."
 
 ustates.39.t:0 "Long's Agricultural Reforms"
-ustates.39.d:0 "Long's presidential run had consisted of promising wide sweeping reforms to the agricultural industry. Long's first reform would be too institute price control and tarrifs on grains and other cereals."
+ustates.39.d:0 "Long's presidential run had consisted of promising wide sweeping reforms to the agricultural industry. Long's first reform would be too institute price control and tariffs on grains and other cereals."
 ustates.39.a:0 "Implement price controls."
 ustates.39.b:0 "We will let the market decide."
 
@@ -1576,7 +1557,7 @@ ustates.266.a:0 "Uncle Sam comes back to action!"
 ustates.266.b:0 "Still not an option"
 
 ustates.273.t:0 "League of Nations invite?"
-ustates.273.d:0 "Our friends in the United States have sent us an invite to join their League of Nations. Doing so would obviously tie us to the fortunes of the United States. Some in our government think just being friends with them will be the more pragmatic choice, others say accepting the invitation is better for it will help us destroy the godless syndicalists in Centroameria"
+ustates.273.d:0 "Our friends in the United States have sent us an invite to join their League of Nations. Doing so would obviously tie us to the fortunes of the United States. Some in our government think just being friends with them will be the more pragmatic choice, others say accepting the invitation is better for it will help us destroy the godless syndicalists in Centroamérica"
 ustates.273.a:0 "Send the Invite!"
 ustates.273.b:0 "Lets Just be Friends"
 
