UoB: Fixed a lot of bugs & converted TUC to use values

--- a/localisation/KR_Union_of_Britain_l_english.yml
+++ b/localisation/KR_Union_of_Britain_l_english.yml
@@ -523,7 +523,7 @@ uob.105.d:0 "We can merge the positions of Chairman and General Secretary. While
 uob.105.a:0 "A strong leader for the Union!"
 uob.105.b:0 "This doesn't seem like a good idea..."
 uob.106.t:0 "The Exchequer's post"
-uob.106.d:0 "With Mosley securing his power in the CTU he has to make up his mind about the Exchequer's office. His retaining his post would create a concentration of power that is not only prohibited by the Union's constitution but may also affect the quality of Maximist rule. The only problem is choosing a suitable candidate."
+uob.106.d:0 "With Mosley securing his power in the TUC, he has to make up his mind about the Exchequer's office. His retaining his post would create a concentration of power that is not only prohibited by the Union's constitution but may also affect the quality of Maximist rule. The only problem is choosing a suitable candidate."
 uob.106.aa:0 "Abe Moffat, director of the Coventry Machine Plants"
 uob.106.ab:0 "David Kirkwood, former militia commander"
 uob.106.ac:0 "Nye Bevan, creator of the Union's Health Service"
@@ -790,11 +790,6 @@ uob.361.c:0 "Mosley sniffs out the coup!"
 uob.362.t:0 "A cold, wet day"
 uob.362.d:0 "Early this morning, the popular writer and skilled militia commander Eric Blair was found dead in his home after obviously having committed suicide. While officially no testament has been found, it is an open secret that Blair was no longer an ally of Grand Protector Mosley. \n\n As the 'improvised' demonstration in his honour slowly and quietly heads through the streets of London, ever more people are joining, many with tears in their eyes; Some weep for the man, some for the last hope against Mosley's dictatorship."
 uob.362.a:0 "Finally he's gone..."
-
-uob.351.t:0 ""
-uob.351.d:0 ""
-uob.351.a:0 ""
-uob.352.b:0 ""
 
 ### Flavour ###
 uobflavour.1.t:0 "A Riddle"
