--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -2213,34 +2213,34 @@
 
  ITA_authoritarian_democrat:0 "Italian Federation"
  ITA_authoritarian_democrat_ADJ:0 "Italian"
- ITA_authoritarian_democrat_DEF:0 "The Italian Federation"
+ ITA_authoritarian_democrat_DEF:0 "the Italian Federation"
  ITA_market_liberal:0 "Italy"
  ITA_market_liberal_ADJ:0 "Italian"
  ITA_market_liberal_DEF:0 "Italy"
  ITA_national_populist:0 "Italian Federation"
  ITA_national_populist_ADJ:0 "Italian"
- ITA_national_populist_DEF:0 "The Italian Federation"
+ ITA_national_populist_DEF:0 "the Italian Federation"
  ITA_paternal_autocrat:0 "Italian Federation"
  ITA_paternal_autocrat_ADJ:0 "Italian"
- ITA_paternal_autocrat_DEF:0 "The Italian Federation"
- ITA_radical_socialist:0 "Italian Socialist Republic"
- ITA_radical_socialist_ADJ:0 "Socialist-Italian"
- ITA_radical_socialist_DEF:0 "The Italian Socialist Republic"
+ ITA_paternal_autocrat_DEF:0 "the Italian Federation"
+ ITA_radical_socialist:0 "Italian People's Republic"
+ ITA_radical_socialist_ADJ:0 "Italian"
+ ITA_radical_socialist_DEF:0 "the Italian People's Republic"
  ITA_social_conservative:0 "Italian Federation"
  ITA_social_conservative_ADJ:0 "Italian"
- ITA_social_conservative_DEF:0 "The Italian Federation"
+ ITA_social_conservative_DEF:0 "the Italian Federation"
  ITA_social_democrat:0 "Italian Federation"
  ITA_social_democrat_ADJ:0 "Italian"
- ITA_social_democrat_DEF:0 "The Italian Federation"
+ ITA_social_democrat_DEF:0 "the Italian Federation"
  ITA_social_liberal:0 "Italy"
  ITA_social_liberal_ADJ:0 "Italian"
  ITA_social_liberal_DEF:0 "Italy"
- ITA_syndicalist:0 "Italian Socialist Republic"
- ITA_syndicalist_ADJ:0 "Socialist-Italian"
- ITA_syndicalist_DEF:0 "The Italian Socialist Republic"
- ITA_totalist:0 "Italian Socialist Republic"
- ITA_totalist_ADJ:0 "Socialist-Italian"
- ITA_totalist_DEF:0 "The Italian Socialist Republic"
+ ITA_syndicalist:0 "Italian Republic"
+ ITA_syndicalist_ADJ:0 "Italian"
+ ITA_syndicalist_DEF:0 "the Italian Republic"
+ ITA_totalist:0 "Italian Republic"
+ ITA_totalist_ADJ:0 "Italian"
+ ITA_totalist_DEF:0 "the Italian Republic"
 
  JAP_authoritarian_democrat:0 "Japanese Empire"
  JAP_authoritarian_democrat_ADJ:0 "Japanese"
