fixed some uses of GetName so they use GetNameDef if it's more logical

--- a/localisation/KR_Belgrade_pact_l_english.yml
+++ b/localisation/KR_Belgrade_pact_l_english.yml
@@ -73,11 +73,11 @@ pact.9.a:0 "Announce our support for Bulgaria!"
 pact.9.b:0 "We must avoid Balkan entanglements."
 
 pact.10.t:0 "[From.GetName] announces support for Bulgaria"
-pact.10.d:0 "The [From.GetAdj] government has announced today that they will support Bulgaria in the case of a war between them and the Belgrade Pact. Whether this will be limited to arms deleveries or that [From.GetName] will intervene with their army, remains unclear."
+pact.10.d:0 "The [From.GetAdj] government has announced today that they will support Bulgaria in the case of a war between them and the Belgrade Pact. Whether this will be limited to arms deleveries or that [From.GetNameDef] will intervene with their army, remains unclear."
 pact.10.a:0 "This is not good."
 
 pact.11.t:0 "[From.GetName] announces support for us"
-pact.11.d:0 "The [From.GetAdj] government has announced today that they will support Bulgaria in the case of a war between us and the Belgrade Pact. Whether this will be limited to arms deleveries or that [From.GetName] will intervene with their army, remains unclear, but hopefully this will keep them from declaring war."
+pact.11.d:0 "The [From.GetAdj] government has announced today that they will support Bulgaria in the case of a war between us and the Belgrade Pact. Whether this will be limited to arms deleveries or that [From.GetNameDef] will intervene with their army, remains unclear, but hopefully this will keep them from declaring war."
 pact.11.a:0 "Thanks, [From.GetName]."
 
 pact.12.t:0 "The new Romanian foreign policy"
@@ -147,7 +147,7 @@ pact.25.b:0 "Offer the Bulgarians an alliance!"
 pact.25.c:0 "We cannot do anything."
 
 pact.26.t:0 "[From.GetAdj] help arrives"
-pact.26.d:0 "As they had promised, the government of [From.GetName] has sent us aid in the ongoing conflict against the Belgrade Pact. Unfortunately, they can't intervene directly, but several volunteer divisions and some equipment have arrived."
+pact.26.d:0 "As they had promised, the government of [From.GetNameDef] has sent us aid in the ongoing conflict against the Belgrade Pact. Unfortunately, they can't intervene directly, but several volunteer divisions and some equipment have arrived."
 pact.26.a:0 "Any help is welcome."
 pact.26.tt:0 "[From.GetAdj] troops and equipment arrive."
 
