--- a/localisation/KR_Siam_l_english.yml
+++ b/localisation/KR_Siam_l_english.yml
@@ -123,7 +123,7 @@ siam.2.t:0 "German Empire in disarray"
 siam.2.d:0 "With the German Empire in turmoil, we have a great opportunity to seize control of Singapore. There is very little that the German Empire can do to stop us at this point."
 siam.2.a:0 "Seize Singapore!"
 siam.2.b:0 "Rather not"
-siam.3.t:0 "[SIA.GetNameDef] seize Singapore!"
+siam.3.t:0 "[SIA.GetName] seizes Singapore!"
 siam.3.d:0 "With our empire in chaos [SIA.GetNameDef] used this opportunity to seize control of Singapore. Currently there is very little that we can do to stop [SIA.GetNameDef] at this point."
 siam.3.a:0 "There is nothing we can do"
 siam.3.b:0 "This means WAR!"
