--- a/localisation/KR_Romania_l_english.yml
+++ b/localisation/KR_Romania_l_english.yml
@@ -508,7 +508,7 @@ romania.53.d:0 "The plebiscite has passed yesterday. Most of the population of D
 romania.53.a:0 "Great!"
 
 romania.54.t:0 "Romania claims Transnistria"
-romania.54.d:0 "The government of [From.GetName] seeks further expansion of their borders, threatening our holdings in Transnistria!"
+romania.54.d:0 "The government of [From.GetNameDef] seeks further expansion of their borders, threatening our holdings in Transnistria!"
 romania.54.a:0 "Outrageous!"
 
 romania.55.t:0 "Romania is defeated"
