A few more fixes

--- a/localisation/KR_Romania_l_english.yml
+++ b/localisation/KR_Romania_l_english.yml
@@ -66,7 +66,8 @@ rrm_santierul_naval_constanta:0 "Şantierul Naval Constanţa"
 ### Foci ###
 ROM_remilitarize_oltenia:0 "Re-militarise Oltenia"
 ROM_remilitarize_oltenia_desc:0 "Article XII of the Treaty of Bucharest forbids Romania to construct or maintain any fortifications or armed forces in Oltenia. It is time to bring an end to this situation."
-### Army expansion
+
+### Army Expansion ###
 ROM_army_expansion:0 "Expand the Army"
 ROM_army_expansion_desc:0 "Since the Iron Guard took power, we already violated the Treaty of Bucharest by introducing army conscription, where the treaty limited Romania to an army of 45,000 men. We need to further expand the army, to ensure a victory in future conflicts."
 ROM_infantry_weapons:0 "New Infantry Weapons"
@@ -85,7 +86,8 @@ ROM_mechanization_effort:0 "Mechanisation Effort"
 ROM_mechanization_effort_desc:0 "The army of the future does not solely consist of foot soldiers. We already have some motorised parts in our army, but a new type of mechanised vehicles will provide even more protection to our soldiers, while enabling them to move through rough terrain with ease."
 ROM_everything_for_the_country:0 "Everything for the Country"
 ROM_everything_for_the_country_desc:0 "The Romanian phrase Totul pentru Ţară, literally \"Everything for the Country\", is the official name of the Iron Guard. It's the duty of every Romanian to sacrifice himself for his country, and we need to remind the people of that."
-### Diplomatic
+
+### Diplomatic ###
 ROM_claim_transylvania:0 "Claim Transylvania"
 ROM_claim_transylvania_desc:0 "There lives a large Romanian minority in Transylvania, in some parts even a majority. We can press our claims on these parts and even extend our claim to include all of Transylvania and Banat."
 ROM_nationalize_oil_fields:0 "Nationalise the Oil Industry"
@@ -104,7 +106,8 @@ ROM_greater_romania_desc:0 "Now that all Romanians are finally united in one sta
 ROM_greater_romania_tooltip:0 "§GGains cores on all previously claimed territories that are now conquered.§!\n\n"
 ROM_extra_research_slot_ii:0 "Recruit New Scientists"
 ROM_extra_research_slot_ii_desc:0 "Our new territories have some large cities and house very smart people. We need to recruit among the population, especially among Romanians, to fuel our advances in R&D."
-### Party
+
+### Party ###
 ROM_cuib:0 "Establish Cuib"
 ROM_cuib_desc:0 "The Iron Guard is organised in chapters called cuib, or \"nest\", which are organised around the virtues of discipline, work, silence, education, mutual aid, and honour. We can expand these chapters so every working men knows his duty to his country."
 ROM_entrench_party:0 "Entrench Party"
@@ -118,7 +121,8 @@ ROM_crush_royalists_desc:0 "It is time to crush the Monarchists once and forever
 ROM_crush_royalists_tooltip:0 "Has won the civil war or averted it"
 ROM_rebuild_country:0 "Rebuild the Country"
 ROM_rebuild_country_desc:0 "The struggle for power with the supporters of the monarchy and other enemies of the republic has left us vulnerable. We need to rebuild our country and form a strong, cohesive society. For Romania!"
-# Industrial
+
+### Industrial ###
 ROM_ploiesti_refineries:0 "Expand the Ploiesti refineries"
 ROM_ploiesti_refineries_desc:0 "The oild fields of Ploiesti are one of the richest of Europe. While being leased to Germany under the obligations of the Treaty of Bucharest, we can further invest in the Ploiesti refineries with help of German and Austrian companies."
 ROM_refinery_bonus:0 "Investment in Ploiesti refineries"
@@ -134,7 +138,8 @@ ROM_dig_for_oil:0 "Dig for Oil"
 ROM_dig_for_oil_desc:0 "The Ploiesti oil fields, already one of the richest in Europe, may hold more oil than we thought before."
 ROM_extra_research_slot:0 "Extra Research Slot"
 ROM_extra_research_slot_desc:0 "Investments in industrial progress lead to advancements in the field of R&D."
-# Air
+
+### Air ###
 ROM_technical_development_society:0 "The Technical Development Society"
 ROM_technical_development_society_desc:0 "The Societatea Pentru Exploatări Technice, or Technical Development Society, is an aircraft plant in Bucharest specialized in developing new training aircraft. We need to expand its facilities to give them the capacity to help our air force grow."
 ROM_invest_in_iar:0 "Invest in IAR"
@@ -157,7 +162,8 @@ ROM_radar_effort:0 "Radar Effort"
 ROM_radar_effort_desc:0 "It is important to detect enemy planes. We need to develop RADAR capabilities to ensure early warning of enemy attacks."
 ROM_naval_bomber_effort:0 "Naval Bomber Effort"
 ROM_naval_bomber_effort_desc:0 "We need to develop more modern naval bombers to harass enemy shipping."
-# Naval
+
+### Naval ###
 ROM_expand_constanta_port:0 "Expand the Constanta port"
 ROM_expand_constanta_port_desc:0 "Constanta is an important port on the Black Sea, we need to expand it to allow for a larger navy."
 ROM_coastal_navy:0 "Coastal Navy"
