--- a/localisation/KR_Siam_l_english.yml
+++ b/localisation/KR_Siam_l_english.yml
@@ -152,21 +152,21 @@ siam.10.t:0 "Integration of Malaya"
 siam.10.d:0 "After three years of hard work, repression of dissidents and propaganda campaigns, the integration of Malaya is completed."
 siam.10.a:0 "Great!"
 siam.11.t:0 "The Fate of Vietnam"
-siam.11.d:0 "As we proclaimed the birth of our Empire, the Vietnamese people has been rioting, their major cities turning into battlefields as local nationalists and syndicalists protest to the idea of being ruled by a Thai sovereign. While our military demands an imposition of martial law and the complete integration of Vietnam into the Empire, some moderate politicians have proposed that we grant them a small amount of autonomy to queel the protests."
+siam.11.d:0 "As we proclaimed the birth of our Empire, the Vietnamese people has been rioting, their major cities turning into battlefields as local nationalists and syndicalists protest to the idea of being ruled by a Thai sovereign. While our military demands an imposition of martial law and the complete integration of Vietnam into the Empire, some moderate politicians have proposed that we grant them a small amount of autonomy to quell the protests."
 siam.11.a:0 "Integrate Vietnam"
 siam.11.b:0 "Release an autonomous Vietnam"
 siam.12.t:0 "Integration of Vietnam"
 siam.12.d:0 "After three years of hard work, repression of dissidents and propaganda campaigns, the integration of Vietnam is completed."
 siam.12.a:0 "Great!"
 siam.13.t:0 "The death of Rama VII"
-siam.13.d:0 "King Prajadhipok of [SIA.GetNameDef], also known as Rama VII, the 7th monarch of the House of Chakri, has died due to a heart failure this morning. The childless monarch will be succeded by his nephew Ananda Mahidol, who took the regnal name Rama VIII."
+siam.13.d:0 "King Prajadhipok of [SIA.GetNameDef], also known as Rama VII, the 7th monarch of the House of Chakri, has died due to a heart failure this morning. The childless monarch will be succeded by his nephew Ananda Mahidol, who took the regal name Rama VIII."
 siam.13.a:0 "May he rest in peace"
 siam.14.t:0 "Paribatra Sukhumbhand's scheme"
 siam.14.d:0 "As the new king is still young and currently away from home studying in Switzerland. Should we take the initiative and quickly seize the title for him who could surely lead us through this war?"
 siam.14.a:0 "The throne is vacant for us"
 siam.14.b:0 "We should stay true to the rightful king"
 siam.15.t:0 "The death of Rama VIII"
-siam.15.d:0 "King Ananda Mahidol of [SIA.GetNameDef], also known as Rama VIII, the 8th monarch of the House of Chakri, was found shot dead in his bed. Although at first thought to have been an accident, his death was ruled a murder by medical examiners, and three royal pages were later executed following very irregular trials. The mysterious circumstances surrounding his death have been the subject of much controversy. The childless monarch will be succeded by his brother Bhumibol Adulyadej, who took the regnal name Rama IX."
+siam.15.d:0 "King Ananda Mahidol of [SIA.GetNameDef], also known as Rama VIII, the 8th monarch of the House of Chakri, was found shot dead in his bed. Although at first thought to have been an accident, his death was ruled a murder by medical examiners, and three royal pages were later executed following very irregular trials. The mysterious circumstances surrounding his death have been the subject of much controversy. The childless monarch will be succeded by his brother Bhumibol Adulyadej, who took the regal name Rama IX."
 siam.15.a:0 "May he rest in peace"
 siam.16.t:0 "The Fall of Singapore"
 siam.16.d:0 "Singapore, the 'Gibraltar of the East,' has been seized by Royal [SIA.GetAdjective] forces despite having been considered an impregnable fortress by its former British owners and its new German overlords.\n\nThe [SIA.GetAdjective] Military Administration of Singapore has chosen the Fullerton Building as its headquarters, and the city has been renamed Singhanakhon, which roughly translates to 'Lion City' The Sarawat Taharn can be seen patrolling the streets en masse to hammer in the message that the [SIA.GetAdjective] are there to stay."
