--- a/localisation/KR_Belgrade_pact_l_english.yml
+++ b/localisation/KR_Belgrade_pact_l_english.yml
@@ -54,13 +54,13 @@ pact.5.a:0 "Invite the Ottoman Empire."
 pact.5.b:0 "We'll be fine without them."
 
 pact.6.t:0 "Serbia invites us to the Belgrade Pact"
-pact.6.d:0 "In a suprising turn of events, the Serbian goverment has invited us to join the Belgrade Pact, an alliance clearly aimed at Bulgaria. Joining this Pact against our former ally would result in detoriated relations with Germany and Austria. However, we may have a chance of claiming some land from Bulgaria or even expand in the direction of the Greeks, who decided not to join."
+pact.6.d:0 "In a surprising turn of events, the Serbian government has invited us to join the Belgrade Pact, an alliance clearly aimed at Bulgaria. Joining this Pact against our former ally would result in deteriorated relations with Germany and Austria. However, we may have a chance of claiming some land from Bulgaria or even expand in the direction of the Greeks, who decided not to join."
 pact.6.a:0 "Announce our support for the Belgrade Pact."
 pact.6.b:0 "Support Bulgaria instead!"
 pact.6.c:0 "We shouldn't focus on the Balkans."
 
 pact.7.t:0 "The Ottoman Empire supports Bulgaria!"
-pact.7.d:0 "As some people predicted, the Ottoman goverment has decided to support the Bulgarians! Their foreign minister stated they will not cooperate with enemies of it's former Central Power ally. Though the agreement hasn't yet been formalized in a real alliance, the Ottomans might come to the aid of the Bulgarians if we decide to attack them."
+pact.7.d:0 "As some people predicted, the Ottoman government has decided to support the Bulgarians! Their foreign minister stated they will not cooperate with enemies of it's former Central Power ally. Though the agreement hasn't yet been formalised in a real alliance, the Ottomans might come to the aid of the Bulgarians if we decide to attack them."
 pact.7.a:0 "Horrible."
 
 pact.8.t:0 "Belgrade Congress argues for a new order on the Balkans"
@@ -73,11 +73,11 @@ pact.9.a:0 "Announce our support for Bulgaria!"
 pact.9.b:0 "We must avoid Balkan entanglements."
 
 pact.10.t:0 "[From.GetName] announces support for Bulgaria"
-pact.10.d:0 "The [From.GetAdj] government has announced today that they will support Bulgaria in the case of a war between them and the Belgrade Pact. Whether this will be limited to arms deleveries or that [From.GetNameDef] will intervene with their army, remains unclear."
+pact.10.d:0 "The [From.GetAdj] government has announced today that they will support Bulgaria in the case of a war between them and the Belgrade Pact. Whether this will be limited to arms deliveries or that [From.GetNameDef] will intervene with their army, remains unclear."
 pact.10.a:0 "This is not good."
 
 pact.11.t:0 "[From.GetName] announces support for us"
-pact.11.d:0 "The [From.GetAdj] government has announced today that they will support Bulgaria in the case of a war between us and the Belgrade Pact. Whether this will be limited to arms deleveries or that [From.GetNameDef] will intervene with their army, remains unclear, but hopefully this will keep them from declaring war."
+pact.11.d:0 "The [From.GetAdj] government has announced today that they will support Bulgaria in the case of a war between us and the Belgrade Pact. Whether this will be limited to arms deliveries or that [From.GetNameDef] will intervene with their army, remains unclear, but hopefully this will keep them from declaring war."
 pact.11.a:0 "Thanks, [From.GetName]."
 
 pact.12.t:0 "The new Romanian foreign policy"
@@ -91,7 +91,7 @@ pact.13.a:0 "Of course they may join."
 pact.13.b:0 "We don't need them."
 
 pact.14.t:0 "Romania joins the Belgrade Pact"
-pact.14.d:0 "Serbia expressed their graditude that we did not forget old alliances and want to join a common cause. Now we are part of the Belgrade pact."
+pact.14.d:0 "Serbia expressed their gratitude that we did not forget old alliances and want to join a common cause. Now we are part of the Belgrade pact."
 pact.14.a:0 "Our independence is secured!"
 
 pact.15.t:0 "Serbia rejects our offer"
@@ -165,7 +165,7 @@ pact.29.d:0 "The Bulgarian government has declined our offer of an alliance. The
 pact.29.a:0 "Good luck on your own then."
 
 pact.30.t:0 "The Fourth Balkan War"
-pact.30.d:0 "The Serbians have attacked Bulgaria together with their Belgrade Pact allies. We have promised to aid Bulgaria in the event of a conflict. Should we send volunteers, or ignore this new conflict? Some are argueing for the last option, seeing the internal problems we face."
+pact.30.d:0 "The Serbians have attacked Bulgaria together with their Belgrade Pact allies. We have promised to aid Bulgaria in the event of a conflict. Should we send volunteers, or ignore this new conflict? Some are arguing for the last option, seeing the internal problems we face."
 pact.30.a:0 "Send aid to Bulgaria."
 pact.30.b:0 "We can't do anything."
 
@@ -257,16 +257,16 @@ pact.49.d:0 "The Fourth Balkan War has not quite had the successes we had in min
 pact.49.a:0 "At least we exist."
 
 pact.50.t:0 "Peace is signed, Bulgarian victory"
-pact.50.d:0 "The Fourth Balkan War has not quite had the successes we had in mind. Bulgaria has been able to successfully mount an offensive and were on the verge of taking Belgrade. Negotations between Serbia and Bulgaria have resulted in a peace deal. We need de-militarise Oltenia again, the kingdom will return under a regency and the Belgrade Pact will be disbanded."
+pact.50.d:0 "The Fourth Balkan War has not quite had the successes we had in mind. Bulgaria has been able to successfully mount an offensive and were on the verge of taking Belgrade. Negotiations between Serbia and Bulgaria have resulted in a peace deal. We need de-militarise Oltenia again, the kingdom will return under a regency and the Belgrade Pact will be disbanded."
 pact.50.a:0 "Are they invincible?"
 
 pact.51.t:0 "Peace is signed, Bulgarian victory"
-pact.51.desc_no_ottomans:0 "The Fourth Balkan War has not quite had the successes we had in mind. Bulgaria has been able to successfully mount an offensive and were on the verge of taking Belgrade. Negotations between Serbia and Bulgaria have resulted in a peace deal. We need de-militarise Thessalia, renounce our claims on Central Macedonia and the Belgrade Pact will be disbanded."
-pact.51.desc_payments_to_ottomans:0 "The Fourth Balkan War has not quite had the successes we had in mind. Bulgaria has been able to successfully mount an offensive and were on the verge of taking Belgrade. Negotations between Serbia and Bulgaria have resulted in a peace deal. We need de-militarise Thessalia, renounce our claims on Central Macedonia and pay war reparations to the Ottomans. The Belgrade Pact will be disbanded."
+pact.51.desc_no_ottomans:0 "The Fourth Balkan War has not quite had the successes we had in mind. Bulgaria has been able to successfully mount an offensive and were on the verge of taking Belgrade. Negotiations between Serbia and Bulgaria have resulted in a peace deal. We need de-militarise Thessalia, renounce our claims on Central Macedonia and the Belgrade Pact will be disbanded."
+pact.51.desc_payments_to_ottomans:0 "The Fourth Balkan War has not quite had the successes we had in mind. Bulgaria has been able to successfully mount an offensive and were on the verge of taking Belgrade. Negotiations between Serbia and Bulgaria have resulted in a peace deal. We need de-militarise Thessalia, renounce our claims on Central Macedonia and pay war reparations to the Ottomans. The Belgrade Pact will be disbanded."
 pact.51.a:0 "Are they invincible?"
 
 pact.52.t:0 "Southern Macedonia"
-pact.52.d:0 "While we have integrated roughly half of Macedonia into our nation, the other half still remains in question. What many officals want is to get rid of the land by offering it to Greece, as it was once Greek, in return for them joining the Pact. Several hawks have pointed out that we asked for the Greeks to join us before and therefore they shouldn't get it. What shall we do?"
+pact.52.d:0 "While we have integrated roughly half of Macedonia into our nation, the other half still remains in question. What many officials want is to get rid of the land by offering it to Greece, as it was once Greek, in return for them joining the Pact. Several hawks have pointed out that we asked for the Greeks to join us before and therefore they shouldn't get it. What shall we do?"
 pact.52.a:0 "Offer Southern Macedonia to the Greeks."
 pact.52.b:0 "It will be part of our occupation zone."
 
